[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Towers/tower3.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Towers/LaserTower.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Towers/Laser.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 96.1873

[node name="Laser" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 8 )
texture = ExtResource( 1 )

[node name="AttackSpeed" type="Timer" parent="."]

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
position = Vector2( 16, 0 )
shape = SubResource( 1 )

[node name="Laser" parent="." instance=ExtResource( 3 )]
position = Vector2( 16, 0 )

[connection signal="shoot_laser" from="." to="Laser" method="_on_Laser_shoot_laser"]
[connection signal="area_entered" from="Range" to="." method="_on_Range_area_entered"]
[connection signal="area_exited" from="Range" to="." method="_on_Range_area_exited"]
